Implement listeners and add save state functionality; add Toast message (B1, B2)

--- a/PracticalTest01Var05/app/src/main/AndroidManifest.xml
+++ b/PracticalTest01Var05/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PracticalTest01Var05">
         <activity
-            android:name=".PracticalTest01Var05MainActivity"
+            android:name=".view.PracticalTest01Var05MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
