Add secondary activity with intent; add toast message when returning to the main activity (C1, C2)

--- a/PracticalTest01Var05/app/src/main/AndroidManifest.xml
+++ b/PracticalTest01Var05/app/src/main/AndroidManifest.xml
@@ -10,6 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PracticalTest01Var05">
         <activity
+            android:name=".view.PracticalTest01Var05SecondaryActivity"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="ro.pub.cs.systems.eim.practicaltest01var05.intent.action.PracticalTest01Var05SecondaryActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".view.PracticalTest01Var05MainActivity"
             android:exported="true">
             <intent-filter>
